--- a/spyy/CY/News.txt
+++ b/spyy/CY/News.txt
@@ -1,15 +1,15 @@
-πώς να προστατέψετε την υγεία με σκόρδο
-μυστικά οικιακής φροντίδας δέρματος
-μικρά κόλπα για το τέλειο πιάτο
-πώς να χρησιμοποιείτε σωστά το αλάτι στο σπίτι
-ωροσκόπιο 2026 για το ζώδιό σας
+πώς να προστατέψετε την υγεία σας με το σκόρδο
+μυστικά περιποίησης δέρματος στο σπίτι
+μικρά κόλπα για ένα τέλειο πιάτο
+πώς να χρησιμοποιείτε σωστά το αλάτι στην καθημερινότητα
+ωροσκόπιο για το 2026 για το ζώδιό σας
 οικονομική πρόβλεψη για κάθε ζώδιο
-απροσδόκητες συμβουλές μαγειρικής
-πώς μια μικρή λεπτομέρεια αλλάζει τη γεύση
-καλύτεροι τρόποι ενίσχυσης ανοσίας στο σπίτι
+απρόσμενες συμβουλές μαγειρικής
+πώς μια μικρή λεπτομέρεια αλλάζει τη γεύση του φαγητού
+οι καλύτεροι τρόποι για ενίσχυση της ανοσίας στο σπίτι
 τι κρύβει το αγαπημένο σας λαχανικό
-πώς να οργανώσετε χώρο στο σπίτι χρήσιμα
+πώς να οργανώσετε τον χώρο στο σπίτι με πρακτικό τρόπο
 συμβουλές για ενέργεια και ευεξία
 ωροσκόπιο τύχης για τον επόμενο μήνα
-πώς να συνδυάζετε σωστά τρόφιμα στη διατροφή
-λαϊφχάκ για άνεση στην κουζίνα
+πώς να συνδυάζετε σωστά τις τροφές στη διατροφή σας
+έξυπνα κόλπα για πιο άνετη κουζίνα
