--- a/spyy/DE/News.txt
+++ b/spyy/DE/News.txt
@@ -1,15 +1,10 @@
-Gesundheit mit Knoblauch schützen
-Geheimnisse der häuslichen Hautpflege
-kleine Tricks für das perfekte Gericht
-Salz im Haushalt richtig verwenden
-Horoskop 2026 für dein Sternzeichen
-Finanzprognose für jedes Tierkreiszeichen
-unerwartete Kochtipps
-wie ein kleines Detail den Geschmack verändert
-beste Wege die Abwehrkräfte zu Hause zu stärken
-was dein Lieblingsgemüse verbirgt
-Raum in der Wohnung sinnvoll organisieren
-Tipps zu Energie und Wohlbefinden
-Glückshoroskop für den nächsten Monat
-Lebensmittel in der Ernährung richtig kombinieren
-Lifehacks für mehr Komfort in der Küche
+Tarot für Ihren persönlichen Erfolg
+Finanzplattform für Rentner
+Lorbeerblatt zur Unterstützung der Gesundheit
+Mythen und Wahrheit über Diäten
+Was man im Ruhestand tun kann
+Wie Rentner ihre Freizeit gestalten können
+Lifehacks in der Küche
+Politik in Deutschland
+Deutsche Politiker schockierten die Bevölkerung
+Bewohner Deutschlands können Zuschläge erhalten
